--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
@@ -5,6 +5,7 @@
 
     <script>
       const div = document.querySelector("[data-widget-name]");
+      console.log(div.dataset.widgetName);
     </script>
   </body>
 </html>
