--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
@@ -6,6 +6,7 @@
     <script>
       const div = document.querySelector("[data-widget-name]");
       console.log(div.dataset.widgetName);
+      console.log(div.getAttribute("data-widget-name"));
     </script>
   </body>
 </html>
