--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -11,5 +11,11 @@
       <li><a href="http://nodejs.org">http://nodejs.org</a></li>
       <li><a href="http://internal.com/test">http://internal.com/test</a></li>
     </ul>
+
+    <script>
+      // setting style for a single link
+      for (const link of document.querySelectorAll("a")) {
+      }
+    </script>
   </body>
 </html>
