--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -15,7 +15,9 @@
     <script>
       // setting style for a single link
       for (const link of document.querySelectorAll("a")) {
-        console.log(link);
+        if (link.getAttribute("href")) {
+          console.log(link);
+        }
       }
     </script>
   </body>
