--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -19,7 +19,7 @@
           link.getAttribute("href") &&
           link.getAttribute("href").includes("://")
         ) {
-          console.log(link.getAttribute("href"));
+          console.log(link.getAttribute("href").includes("://"));
         }
       }
     </script>
