--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -23,6 +23,14 @@
           link.style.color = "orange";
         }
       }
+
+      for (const link of document.querySelectorAll("a")) {
+        const href = link.getAttribute("href");
+
+        if (!href) {
+          continue;
+        }
+      }
     </script>
   </body>
 </html>
