--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -32,6 +32,10 @@
         if (!href) {
           continue;
         }
+
+        if (!href.includes("://")) {
+          continue;
+        }
       }
     </script>
   </body>
