--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -36,6 +36,10 @@
         if (!href.includes("://")) {
           continue;
         }
+
+        if (href.startsWith("http://internal.com")) {
+          continue;
+        }
       }
     </script>
   </body>
