--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -40,6 +40,8 @@
         if (href.startsWith("http://internal.com")) {
           continue;
         }
+
+        link.style.color = "orange";
       }
     </script>
   </body>
