--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/make-external-links-orange.html
@@ -41,7 +41,7 @@
           continue;
         }
 
-        link.style.color = "orange";
+        link.style.color = "green";
       }
     </script>
   </body>
