--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .alert {
+        padding: 15px;
+        border: 1px solid #d6e9c6;
+        border-radius: 4px;
+        color: #3c763d;
+        background-color: #dff0d8;
+      }
+    </style>
+  </head>
   <body>
     <script src="index.js"></script>
   </body>
