--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -18,6 +18,10 @@
       <li>2</li>
     </ol>
 
+    <script>
+      ol.before("before"); // insert string "before" before <ol>
+      ol.after("after");
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
