--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -20,7 +20,7 @@
 
     <script>
       ol.before("before"); // insert string "before" before <ol>
-      ol.after("after");
+      ol.after("after"); // insert string "after" after <ol>
     </script>
     <script src="index.js"></script>
   </body>
