--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -21,6 +21,10 @@
     <script>
       ol.before("before"); // insert string "before" before <ol>
       ol.after("after"); // insert string "after" after <ol>
+
+      const liFirst = document.createElement("li");
+      liFirst.innerHTML = "prepend";
+      ol.prepend(liFirst); // insert liFirst at the beginning of <ol>
     </script>
     <script src="index.js"></script>
   </body>
