--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -25,6 +25,10 @@
       const liFirst = document.createElement("li");
       liFirst.innerHTML = "prepend";
       ol.prepend(liFirst); // insert liFirst at the beginning of <ol>
+
+      const liLast = document.createElement("li");
+      liLast.innerHTML = "append";
+      ol.append(liLast); // insert liLast at the end of <ol>
     </script>
     <script src="index.js"></script>
   </body>
