--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,10 @@
     </style>
   </head>
   <body>
+    <div id="div"></div>
+
+    <script></script>
+
     <ol id="ol">
       <li>0</li>
       <li>1</li>
