--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -14,7 +14,9 @@
   <body>
     <div id="div">I am a DIV</div>
 
-    <script></script>
+    <script>
+      div.before("<p>Hello</p>", document.createElement("hr"));
+    </script>
 
     <ol id="ol">
       <li>0</li>
