--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,8 @@
     </style>
   </head>
   <body>
+    <div id="insert-adjacent-html">Insert Adjacent HTML</div>
+
     <div id="div">I am a DIV</div>
 
     <script>
