--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -14,6 +14,11 @@
   <body>
     <div id="insert-adjacent-html">Insert Adjacent HTML</div>
 
+    <script>
+      const insertAdjacentHtml = window["insert-adjacent-html"];
+      console.log(insertAdjacentHtml);
+    </script>
+
     <div id="div">I am a DIV</div>
 
     <script>
