--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -23,6 +23,7 @@
         "beforebegin",
         "<h1>Before begin</h1>"
       );
+      insertAdjacentHtml.insertAdjacentHTML("afterend", "<h2>Bye</h2>");
     </script>
 
     <div id="div">I am a DIV</div>
