--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -24,6 +24,10 @@
         "<h1>Before begin</h1>"
       );
       insertAdjacentHtml.insertAdjacentHTML("afterend", "<h2>Bye</h2>");
+      insertAdjacentHtml.insertAdjacentHTML(
+        "afterbegin",
+        "<h3>After begin</h3>"
+      );
     </script>
 
     <div id="div">I am a DIV</div>
