--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -28,6 +28,7 @@
         "afterbegin",
         "<h3>After begin</h3>"
       );
+      insertAdjacentHtml.insertAdjacentHTML("beforeend", "<h3>Before end</h3>");
     </script>
 
     <div id="div">I am a DIV</div>
