--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,12 @@
     </style>
   </head>
   <body>
+    <script>
+      document.body.insertAdjacentHTML(
+        "afterbegin",
+        `<div class='.alert'><strong>Hi there!</strong></div>`
+      );
+    </script>
     <div id="insert-adjacent-html">Insert Adjacent HTML</div>
 
     <script>
