--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -15,7 +15,7 @@
     <script>
       document.body.insertAdjacentHTML(
         "afterbegin",
-        `<div class='.alert'><strong>Hi there!</strong></div>`
+        `<div class='alert'><strong>Hi there!</strong></div>`
       );
     </script>
     <div id="insert-adjacent-html">Insert Adjacent HTML</div>
