--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <script>
+      const elem = document.createElement("div");
+    </script>
+
+    <script>
       document.body.insertAdjacentHTML(
         "afterbegin",
         `<div class='alert'><strong>Hi there!</strong> You've read an important message.</div>`
