--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -14,6 +14,9 @@
   <body>
     <script>
       const elem = document.createElement("div");
+      elem.className = "alert";
+      elem.innerHTML =
+        "<strong>Hi there!</strong> You've read an important message.";
     </script>
 
     <script>
