--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -17,6 +17,7 @@
       elem.className = "alert";
       elem.innerHTML =
         "<strong>Hi there!</strong> You've read an important message.";
+      document.body.append(elem);
     </script>
 
     <script>
