--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -18,6 +18,10 @@
       elem.innerHTML =
         "<strong>Hi there!</strong> You've read an important message.";
       document.body.append(elem);
+
+      setTimeout(function () {
+        elem.remove();
+      }, 1000);
     </script>
 
     <script>
