--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -20,6 +20,7 @@
       document.body.append(elem);
 
       setTimeout(function () {
+        // node.remove().
         elem.remove();
       }, 1000);
     </script>
