--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,9 @@
     </style>
   </head>
   <body>
+    <div id="first">First</div>
+    <div id="second">Second</div>
+
     <script>
       const elem = document.createElement("div");
       elem.className = "alert";
