--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -16,6 +16,10 @@
     <div id="second">Second</div>
 
     <script>
+      second.after(first);
+    </script>
+
+    <script>
       const elem = document.createElement("div");
       elem.className = "alert";
       elem.innerHTML =
