--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -16,7 +16,8 @@
     <div id="second">Second</div>
 
     <script>
-      second.after(first);
+      // no need to call remove
+      second.after(first); // take #second and after it insert #first
     </script>
 
     <script>
