--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,10 @@
     </style>
   </head>
   <body>
+    <div class="alert">
+      <strong>Hi there!</strong> You've read an important message.
+    </div>
+
     <div id="first">First</div>
     <div id="second">Second</div>
 
