--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -19,6 +19,10 @@
       <strong>Hi there!</strong> You've read an important message.
     </div>
 
+    <script>
+      const clonedElem = document.getElementById("alert").cloneNode(true); // clone the message
+    </script>
+
     <div id="first">First</div>
     <div id="second">Second</div>
 
