--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -21,6 +21,7 @@
 
     <script>
       const clonedElem = document.getElementById("alert").cloneNode(true); // clone the message
+      clonedElem.querySelector("strong").innerHTML = "Bye there!"; // change the clone
     </script>
 
     <div id="first">First</div>
