--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -22,6 +22,7 @@
     <script>
       const clonedElem = document.getElementById("alert").cloneNode(true); // clone the message
       clonedElem.querySelector("strong").innerHTML = "Bye there!"; // change the clone
+      document.getElementById("alert").after(clonedElem); // show the clone after the existing div
     </script>
 
     <div id="first">First</div>
