--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -21,6 +21,7 @@
         for (let i = 1; i <= 3; i++) {
           const li = document.createElement("li");
           li.append(i);
+          fragment.append(li);
         }
       }
     </script>
