--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -118,6 +118,7 @@
       const list = document.createElement("ul");
       const listItems = document.querySelectorAll("li");
       list.append(...listItems);
+      document.body.insertAdjacentElement("afterend", list);
     </script>
     <script src="index.js"></script>
   </body>
