--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -12,6 +12,14 @@
     </style>
   </head>
   <body>
+    <ul id="with-array"></ul>
+
+    <script>
+      function getListContent() {
+        const result = [];
+      }
+    </script>
+
     <ul id="ul"></ul>
 
     <script>
