--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -17,6 +17,12 @@
     <script>
       function getListContent() {
         const result = [];
+
+        for (let i = 1; i <= 3; i++) {
+          const li = document.createElement("li");
+          li.append(i);
+          result.push(li);
+        }
       }
     </script>
 
