--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -26,6 +26,8 @@
 
         return result;
       }
+
+      document.getElementById("with-array").append(...getListContent());
     </script>
 
     <ul id="ul"></ul>
