--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -133,9 +133,9 @@
     </script>
 
     <script>
-      const list = document.createElement("ul");
-      const listItems = document.querySelectorAll("li");
-      list.append(...listItems);
+      // const list = document.createElement("ul");
+      // const listItems = document.querySelectorAll("li");
+      // list.append(...listItems);
       document.body.insertAdjacentElement("afterend", list);
     </script>
     <script src="index.js"></script>
