--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -138,6 +138,12 @@
       list.append(...listItems);
       document.body.insertAdjacentElement("afterend", list);
     </script>
+
+    <ol id="list">
+      <li>1-</li>
+      <li>2-</li>
+      <li>3-</li>
+    </ol>
     <script src="index.js"></script>
   </body>
 </html>
