--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -144,6 +144,11 @@
       <li>2-</li>
       <li>3-</li>
     </ol>
+
+    <script>
+      const newLi = document.createElement("li");
+      newLi.innerHTML = "Hello, world!";
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
