--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -148,6 +148,8 @@
     <script>
       const newLi = document.createElement("li");
       newLi.innerHTML = "Hello, world!";
+
+      document.getElementById("list").appendChild(newLi);
     </script>
     <script src="index.js"></script>
   </body>
