--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -149,6 +149,7 @@
       const newLi = document.createElement("li");
       newLi.innerHTML = "Hello, world!";
 
+      // parentElem.appendChild(node)
       document.getElementById("list").appendChild(newLi);
     </script>
     <script src="index.js"></script>
