--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -152,6 +152,12 @@
       // parentElem.appendChild(node)
       document.getElementById("list").appendChild(newLi);
     </script>
+
+    <ol id="lista">
+      <li>0=</li>
+      <li>1=</li>
+      <li>2=</li>
+    </ol>
     <script src="index.js"></script>
   </body>
 </html>
