--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -158,6 +158,13 @@
       <li>1=</li>
       <li>2=</li>
     </ol>
+
+    <script>
+      const newLi = document.createElement("li");
+      newLi.innerHTML = "Hello, world!";
+
+      // parentElem.insertBefore(node, nextSibling)
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
