--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -164,6 +164,9 @@
       newLi.innerHTML = "Hello, world!";
 
       // parentElem.insertBefore(node, nextSibling)
+      document
+        .getElementById("lista")
+        .insertBefore(newLi, document.getElementById("lista").children[1]);
     </script>
     <script src="index.js"></script>
   </body>
