--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -160,13 +160,13 @@
     </ol>
 
     <script>
-      const newLi = document.createElement("li");
-      newLi.innerHTML = "Hello, world!";
+      const li = document.createElement("li");
+      li.innerHTML = "Hello, world!";
 
       // parentElem.insertBefore(node, nextSibling)
       const parentElem = document.getElementById("lista");
 
-      parentElem.insertBefore(newLi, parentElem.children[1]);
+      parentElem.insertBefore(li, parentElem.children[1]);
     </script>
     <script src="index.js"></script>
   </body>
