--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -167,6 +167,9 @@
       const parentElem = document.getElementById("lista");
 
       parentElem.insertBefore(li, parentElem.children[1]);
+
+      const li2 = document.createElement("li");
+      li2.innerHTML = "Are you fine?";
     </script>
     <script src="index.js"></script>
   </body>
