--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -170,6 +170,8 @@
 
       const li2 = document.createElement("li");
       li2.innerHTML = "Are you fine?";
+
+      parentElem.insertBefore(li2, parentElem.firstChild);
     </script>
     <script src="index.js"></script>
   </body>
