--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -178,6 +178,11 @@
       newLiNode.innerHTML = "replaced node";
 
       parentElem.replaceChild(newLiNode, parentElem.children[4]);
+
+      // parentElem.removeChild(node)
+      parentElem.removeChild(
+        parentElem.lastElementChild.previousElementSibling
+      );
     </script>
     <script src="index.js"></script>
   </body>
