--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -184,6 +184,12 @@
         parentElem.lastElementChild.previousElementSibling
       );
     </script>
+
+    <p>Somewhere in the page...</p>
+
+    <script>
+      document.write("<b>Hello from JS</b>");
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
