--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -190,6 +190,8 @@
     <script>
       document.write("<b>Hello from JS</b>");
     </script>
+
+    <p>The end</p>
     <script src="index.js"></script>
   </body>
 </html>
