--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -192,6 +192,10 @@
     </script>
 
     <p>The end</p>
+
+    <p style="color: red">
+      After one second the contents of this page will be replaced...
+    </p>
     <script src="index.js"></script>
   </body>
 </html>
