--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index.html
@@ -196,6 +196,12 @@
     <p style="color: red">
       After one second the contents of this page will be replaced...
     </p>
+
+    <script>
+      setTimeout(function () {
+        document.write("<b>...By this</b>");
+      }, 1000);
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
