--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -12,6 +12,9 @@
     </style>
   </head>
   <body>
+    <div class="alert">
+      <strong>Hi there!</strong> You've read an important message.
+    </div>
     <script src="index2.js"></script>
   </body>
 </html>
