--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -18,6 +18,12 @@
     >
       <strong>Hi there!</strong> You've read an important message.
     </div>
+
+    <script>
+      setTimeout(function () {
+        document.getElementById("html-example").remove();
+      }, 1000);
+    </script>
     <script src="index2.js"></script>
   </body>
 </html>
