--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -25,6 +25,14 @@
       <li>2</li>
     </ol>
 
+    <div id="div"></div>
+
+    <script>
+      document
+        .getElementById("div")
+        .before("<p>Hello World!</p>", document.createElement("hr"));
+    </script>
+
     <script>
       setTimeout(function () {
         document.getElementById("html-example").remove();
