--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -39,6 +39,14 @@
       }, 4000);
     </script>
 
+    <ul id="another-div"></ul>
+
+    <script>
+      document
+        .getElementById("another-div")
+        .append(...document.getElementsByTagName("li"));
+    </script>
+
     <script>
       setTimeout(function () {
         document.getElementById("html-example").remove();
