--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -44,7 +44,7 @@
     <script>
       document
         .getElementById("another-div")
-        .append(...document.getElementsByTagName("li"));
+        .append(...document.querySelectorAll("li"));
     </script>
 
     <script>
