--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -54,6 +54,9 @@
         document.getElementById("html-example").remove();
       }, 1000);
     </script>
+
+    <div id="using-adjacent-html"></div>
+
     <script src="index2.js"></script>
   </body>
 </html>
