--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -57,6 +57,11 @@
 
     <div id="using-adjacent-html"></div>
 
+    <script>
+      const usingAdjacentHtml = document.getElementById("using-adjacent-html");
+      usingAdjacentHtml.insertAdjacentHTML("afterbegin", "<p>After Begin</p>");
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
