--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -60,6 +60,7 @@
     <script>
       const usingAdjacentHtml = document.getElementById("using-adjacent-html");
       usingAdjacentHtml.insertAdjacentHTML("afterbegin", "<p>After Begin</p>");
+      usingAdjacentHtml.insertAdjacentHTML("beforeend", "<p>Before End</p>");
     </script>
 
     <script src="index2.js"></script>
