--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -62,6 +62,10 @@
       usingAdjacentHtml.insertAdjacentHTML("afterbegin", "<p>After Begin</p>");
       usingAdjacentHtml.insertAdjacentHTML("beforeend", "<p>Before End</p>");
       usingAdjacentHtml.insertAdjacentHTML("afterend", "<p>After End</p>");
+      usingAdjacentHtml.insertAdjacentHTML(
+        "beforebegin",
+        "<p>Before Begin</p>"
+      );
     </script>
 
     <script src="index2.js"></script>
