--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -83,6 +83,7 @@
     <script>
       const ulElem = document.getElementById("ul-id");
       ulElem.insertAdjacentHTML("beforebegin", "<p>Before Begin</p>");
+      ulElem.insertAdjacentHTML("afterbegin", "<p>After Begin</p>");
     </script>
 
     <script src="index2.js"></script>
