--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -84,6 +84,7 @@
       const ulElem = document.getElementById("ul-id");
       ulElem.insertAdjacentHTML("beforebegin", "<p>Before Begin</p>");
       ulElem.insertAdjacentHTML("afterbegin", "<li>After Begin</li>");
+      ulElem.insertAdjacentHTML("beforeend", "<li>Before End</li>");
     </script>
 
     <script src="index2.js"></script>
