--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -85,6 +85,7 @@
       ulElem.insertAdjacentHTML("beforebegin", "<p>Before Begin</p>");
       ulElem.insertAdjacentHTML("afterbegin", "<li>After Begin</li>");
       ulElem.insertAdjacentHTML("beforeend", "<li>Before End</li>");
+      ulElem.insertAdjacentHTML("afterend", "<p>After End</p>");
     </script>
 
     <script src="index2.js"></script>
