--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -86,6 +86,7 @@
       ulElem.insertAdjacentHTML("afterbegin", "<li>After Begin</li>");
       ulElem.insertAdjacentHTML("beforeend", "<li>Before End</li>");
       ulElem.insertAdjacentHTML("afterend", "<p>After End</p>");
+      ulElem.insertAdjacentHTML("beforebegin", "<!-- Comment -->");
     </script>
 
     <script src="index2.js"></script>
