--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -92,6 +92,7 @@
         ulElem.previousElementSibling.remove();
         ulElem.previousSibling.remove();
         ulElem.nextElementSibling.remove();
+        ulElem.remove();
       }, 7000);
     </script>
 
