--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -96,6 +96,13 @@
       }, 7000);
     </script>
 
+    <script>
+      document.body.insertAdjacentHTML(
+        "afterbegin",
+        "<div class='alert'><strong>Hi there!</strong> You've read an important message.</div>"
+      );
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
