--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -107,6 +107,13 @@
       }, 8000);
     </script>
 
+    <script>
+      const removedDiv = document.createElement("div");
+      removedDiv.className = "alert";
+      removedDiv.innerHTML =
+        "<strong>Hi there!</strong> You've read an important message.";
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
