--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -119,6 +119,13 @@
       }, 9000);
     </script>
 
+    <div id="first">First</div>
+    <div id="second">Second</div>
+
+    <script>
+      document.getElementById("second").after(document.getElementById("first"));
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
