--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -123,7 +123,8 @@
     <div id="second">Second</div>
 
     <script>
-      document.getElementById("second").after(document.getElementById("first"));
+      // no need to call remove
+      document.getElementById("second").after(document.getElementById("first")); // take #second and after it insert #first
     </script>
 
     <script src="index2.js"></script>
